force-app/main/default/objects/Payment__c/fields/Amount_Converted_to_USD__c.field-meta.xml
<CustomField>
    <fullName>Amount_Converted_to_USD__c</fullName>
    <label>Amount Converted to USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>