force-app/main/default/objects/Payment__c/fields/Amount_Incurred__c.field-meta.xml
<CustomField>
    <fullName>Amount_Incurred__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Amount Incurred</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>