force-app/main/default/objects/Payment__c/fields/Currency_Incurred_In__c.field-meta.xml
<CustomField>
    <fullName>Currency_Incurred_In__c</fullName>
    <label>Currency Incurred In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency_Values</valueSetName>
    </valueSet>
</CustomField>