force-app/main/default/objects/Payment__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internet Allowance</fullName>
            </value>
            <value>
                <fullName>Well Being Allowance</fullName>
            </value>
            <value>
                <fullName>Accessories Allowance</fullName>
            </value>
            <value>
                <fullName>Commuting Allowance</fullName>
            </value>
            <value>
                <fullName>House Rent Allowance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>